
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-anomaly-detection"
version = "0.1.0"
description = "Flag anomalous sensor behavior and turn telemetry into actionable alerts for field operations."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
